rsync changes since last release

  ENHANCEMENTS:

    * The --delete-after option now implies --delete. (Wayne Davison)

    * The --suffix option can now be used with --backup-dir. (Michael
      Zimmerman)

    * Combining "::" syntax with the -rsh/-e option now uses the
      specified remote-shell as a transport to talk to a (newly-spawned)
      server-daemon.  This allows someone to use daemon features, such
      as modules, over a secure protocol, such as ssh. (JD Paul)

    * The rsync:// syntax for daemon connections is now accepted in the
      destination field.

    * If the file name given to --include-from or --exclude-from is "-",
      rsync will read from standard input. (J.W. Schultz)

    * New option --link-dest which is like --compare-dest except that
      unchanged files are hard-linked in to the destination directory.
      (J.W. Schultz)

    * Don't report an error if an excluded file disappears during an
      rsync run. (Eugene Chupriyanov and Bo Kersey)

  BUG FIXES:
  
    * Fix "forward name lookup failed" errors on AIX 4.3.3.  (John
      L. Allen, Martin Pool)

    * Generate each file's rolling-checksum data as we send it, not
      in a separate (memory-eating) pass before hand.  This prevents
      timeout errors on really large files. (Stefan Nehlsen)

    * Fix compilation on Tru64.  (Albert Chin, Zoong Pham)

    * Better handling of some client-server errors.  (Martin Pool)

    * Fixed a crash that would occur when sending a list of files that
      contains a duplicate name (if it sorts to the end of the file
      list) and using --delete.  (Wayne Davison)

  INTERNAL:

    * Many code cleanups and improved internal documentation.  (Martin 
      Pool, Nelson Beebe)

    * More test cases.  (Martin Pool)

    * Updated included popt to the latest vendor drop, version 1.6.4.
      (Jos Backus)